--- a/Public/index.html
+++ b/Public/index.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>  
 <html lang="en">
 <head>
+
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
     <body>
-    <ul id="allmessages"></ul>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-8">
+      <div class="panel panel-info">
+        My wonderful chat
+      </div>
+      <div class="panel-body"><ul id="allmessages"></ul></div>
+      <div class="panel-footer"> 
+        <form class="form-inline" action="">
+          <div class="input-group">           
+              <input type="text" class="form-control" placeholder="enter message..." id="userid"/>
+              <span class="input-group-btn">
+                <button class="btn btn-info" type="submit">SEND</button>
+              </span>            
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>    
+<!--     <ul id="allmessages"></ul>
     <form action="">
       <input id="userid" autocomplete="off" /><button type="submit">Send</button>
-    </form>
+    </form> -->
     <script>
       var socket = io();
       $('form').submit(function(e){
