--- a/Public/index.html
+++ b/Public/index.html
@@ -1,18 +1,45 @@
-<!DOCTYPE html>  
+<!DOCTYPE html>
 <html lang="en">
 <head>
-
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <title>Bootstrap Example</title>
+  <script src="/socket.io/socket.io.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-    <body>
+<body>
 <div class="container">
   <div class="row">
     <div class="col-sm-8">
       <div class="panel panel-info">
-        My wonderful chat
+        <form class="form-inline" action="">
+          <div class="input-group">     
+<!--               <input type="text" class="form-control" placeholder="Join the room..." id="userid"/> -->
+              <span class="input-group-btn">
+                <button class="btn btn-info" id="join" type="button" data-toggle="modal" data-target="#joinModal">Join</button>
+              </span>  
+                  <div class="modal fade" id="joinModal" role="dialog">
+                    <div class="modal-dialog modal-sm">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <button type="button" class="close" data-dismiss="modal">&times;</button>
+                          <h4 class="modal-title">Please Join</h1>
+                        </div>
+                        <div class="modal-body">
+                          <form class="form-inline" action="">
+                            <div class="input-group">           
+                                <input type="text" class="form-control" placeholder="join chat..." id="joinid"/>
+                                <span class="input-group-btn">
+                                  <button class="btn btn-info" type="submit">Join Chat</button>
+                                </span>            
+                            </div>
+                          </form>
+                        </div>
+                      </div>
+                    </div>
+                  </div>          
+          </div>
+        </form>
       </div>
       <div class="panel-body"><ul id="allmessages"></ul></div>
       <div class="panel-footer"> 
@@ -38,6 +65,8 @@
       socket.on('chat-message', function(msg){
         $('#allmessages').append($('<li>').text(msg));
       });
+
     </script>
-  </body>
+
+</body>
 </html>
