--- a/Public/index.html
+++ b/Public/index.html
@@ -66,7 +66,7 @@
   </div>
 </div>    
     <script>
-      var socket = io();
+      var socket = io.connect();
       $('form').submit(function(e){
         e.preventDefault();
         socket.emit('chat-message', $('#userid').val());
