added the images folder

--- a/Public/index.html
+++ b/Public/index.html
@@ -9,7 +9,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body style="padding-top:50px;">
+<body background="/images/bg_dark.jpg" style="padding-top:50px;">
 <div class="container" style="height:100px">
   <div class="row col-xs-12 col-md-offset-2 col-md-8 col-lg-8 col-lg-offset-2">
     <div class="col-sm-12 thumbnail">
