--- a/Public/index.html
+++ b/Public/index.html
@@ -8,6 +8,19 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <style type="text/css">
+    body {
+      background-color: #000; 
+      background-image: url(/images/bg_dark.jpg); 
+      background-repeat: no-repeat; 
+      background-position: center;
+      background-attachment: fixed;       
+      webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover; 
+    } 
+  </style>
 </head>
 <body background="/images/bg_dark.jpg" style="padding-top:50px;">
 <div class="container" style="height:100px">
