--- a/Public/index.html
+++ b/Public/index.html
@@ -10,15 +10,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <style type="text/css">
     body {
-      background-color: #000; 
-      background-image: url(/images/bg_dark.jpg); 
-      background-repeat: no-repeat; 
-      background-position: center;
-      background-attachment: fixed;       
-      webkit-background-size: cover;
-      -moz-background-size: cover;
-      -o-background-size: cover;
-      background-size: cover; 
+      background: url(/images/bg_dark.jpg) no-repeat scroll center top transparent;
+      height: 100px;
     } 
   </style>
 </head>
